--- a/Lesson_JS_2/app/index.html
+++ b/Lesson_JS_2/app/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>Функции</title>
-	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<h1>Вывести простые числа</h1>
@@ -12,6 +11,6 @@
 	<p>Другими словами, n>1 – простое, если при делении на любое число от 2 до n-1 есть остаток.</p>
 	<p>Создайте функцию, которая выводит все простые числа из интервала, который задает пользователь.</p>
 
-	<script src="/js/index.js"></script>	
+	<script src="./js/index.js"></script>	
 </body>
 </html>
