--- a/exam2/src/index.html
+++ b/exam2/src/index.html
@@ -425,7 +425,7 @@
 			</div>
 		</div>
 	</footer>
-	<div class="up">
+	<div class="up d-none">
 		<!-- <i class="fas fa-chevron-up"></i> -->
 	</div>
 
