--- a/exam2/app/index.html
+++ b/exam2/app/index.html
@@ -21,7 +21,7 @@
 							<img src="img/logo.svg" alt="Beetroot" class="logo__img">
 						</a>						
 					</div>
-					<div id="menu" class="col-10">
+					<div id="menu" class="col-10 menu">
 						<div id="menu-toggle">
 							<div id="menu-icon">
 								<div class="bar"></div>
@@ -31,7 +31,7 @@
 						</div>
 						<ul class="nav-menu__list">
 							<li class="nav-menu__item">
-								<a class="nav-menu__link" href="#home">home</a>
+								<a class="nav-menu__link active" href="#home">home</a>
 							</li>
 							<li class="nav-menu__item">
 								<a class="nav-menu__link" href="#about">about</a>
@@ -344,7 +344,7 @@
 
 	<section class="contact" id="contact"> 
 		<div class="bg">
-			</div>
+		</div>
 		<div id="map"></div>	
 		<div class="container">
 			<div class="row mb-5">
@@ -433,7 +433,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	<script src="js/slick.min.js"></script>
-
+	<script src="viewport.jquery.js" type="text/javascript"></script>
 	<script src="js/script.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMtmSd2JSrcJhscPe0JkKshTWIsQekDBk&callback=initMap"
 	async></script>
